fixed swagger documentation
* some endpoints had a wrong HTTP status code in the swagger
  documentation.

see #175
